# makefile-mcp

./: AUTO_DISCOVERY_PLAN.md  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
src/makefile_mcp/: __init__.py  __main__.py  parser.py  server.py
src/mcp_server_make/: parser.py  server_v2.py
tests/: test_parser.py  test_server.py  test_working_dir_config.py
